# clay_gfx

./: CMakeLists.txt  anchor.cpp  anchor.h  config.yaml  drawable.h  line.cpp  line.h  main.cpp  point.h  polyline.cpp  polyline.h  scene.cpp  scene.h  shader.cpp  shader.h
common/: float_approximator.cpp  float_approximator.h
drawable/: drawable.h  triangle.cpp  triangle.h
drawable/attribute/: boundary.cpp  boundary.h  range.cpp  range.h
drawable/plotting/: axes.cpp  axes.h  axis.cpp  axis.h
drawable/primitive/: color.cpp  color.h  line.cpp  line.h  polyline.cpp  polyline.h
drawable/simple/: circle.cpp  circle.h  rect.cpp  rect.h  triangle.cpp  triangle.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
geometry/: anchor.cpp  anchor.h  line-metrics.cpp  line-metrics.h  line.cpp  line.h  point-geo.cpp  point-geo.h  point.cpp  point.h  tri-metrics.cpp  tri-metrics.h  vector.cpp  vector.h
parser/: math_expr.h  math_parser.h
shader/: shader.cpp  shader.h
test/: CMakeLists.txt  math_expr_test.cpp  math_parser_test.cpp
